# RetroESP32-P4

./: .gitignore  ARCHITECTURE.md  Create_PAPP_Template.txt  DEVELOPMENT_LOG.md  GamePadSetUp.txt  GenFw.bat  HDMIport.md  PSRAM_APP.md  PSRAM_APP_Exploration.txt  README.md  aes_capture.txt  autostart_test.txt  baseline_generator68k.txt  baseline_musashi.txt  blazstar_log2.txt  boot_log.txt  build_all.ps1  build_hdmi.ps1  capture_crash_ipc.py  capture_fps.py  capture_ipc_test.py  capture_kof98.py  capture_mslug3.py  capture_ridinghero.py  capture_samsho4.py  capture_tophunter.py  capture_tophuntr.py  capture_tophuntr_diag.py  capture_zupapa.py  check_bios.py  check_ridheroh.py  coin_start_test.txt  coin_start_v2.txt  coin_start_v3.txt  crash_log.txt  ctl1_hook_capture.txt  debug_log.txt  demo2play_test.txt  demo_blocker_test.txt  diag_log.txt  (+27 more)
ESP32_P4_PAPP_Template/: CONTEXT.md  build_template.ps1  main.c
apps/atari800/: CMakeLists.txt  sdkconfig
apps/gb/: CMakeLists.txt
apps/genesis/: CMakeLists.txt  sdkconfig  sdkconfig.defaults
apps/handy/: CMakeLists.txt  sdkconfig.defaults
apps/neogeo/: CMakeLists.txt  autostart_test.txt  sdkconfig.defaults
apps/nes/: CMakeLists.txt
apps/opentyrian/: CMakeLists.txt  sdkconfig  sdkconfig.defaults
apps/pce/: CMakeLists.txt  sdkconfig.defaults
apps/prosystem/: CMakeLists.txt
apps/psram_doom/: papp_i_sound.c  papp_i_system.c  papp_i_video.c  papp_main.c  papp_rg_stubs.c  papp_syscalls.c
apps/psram_duke3d/: papp_main.c  papp_sdl_audio.c  papp_sdl_event.c  papp_sdl_system.c  papp_sdl_video.c  papp_syscalls.c
apps/psram_opentyrian/: papp_main.c  papp_sdl_audio.c  papp_sdl_event.c  papp_sdl_system.c  papp_sdl_video.c  papp_syscalls.c
apps/psram_quake/: papp_input.c  papp_main.c  papp_rg_stubs.c  papp_snd.c  papp_sys.c  papp_syscalls.c  papp_vid.c
apps/psram_test/: main.c
components/atari800/: CMakeLists.txt  atari.cpp  atari800_run.cpp  libatari800.h  statesav.h
components/atari800/include/: atari800_run.h
components/gngeo/: CMakeLists.txt  adpcm_cache.c  adpcm_cache.h  emu.c  emu.h  esp32_platform.c  generator68k_interf.c  gnutil.h  memory.c  memory.h  menu.h  musashi_interf.c  neocrypt.c  roms.c  screen.h  state.c  stb_zlib.c  transpack.c  unzip.c  video.c  video.h
components/gngeo/generator68k/: cpu68k.c  cpu68k.h  mem68k.h
components/gngeo/include/: SDL.h  SDL_endian.h  SDL_types.h  profiler.h  zlib.h
components/gngeo/mamez80/: z80.h
components/gngeo/musashi/: m68k.h  m68kconf.h  m68kcpu.c  m68kcpu.h  macros.h
components/gngeo/ym2610/: ym2610.c
components/gnuboy/: CMakeLists.txt  fastmem.c  gnuboy_run.c  lcd.c  loader.c  main.c  mem.c  save.c  sound.c
components/gnuboy/include/: gnuboy_run.h  loader.h
components/gwenesis/: CMakeLists.txt
components/gwenesis/src/bus/: gwenesis_bus.c
components/gwenesis/src/cpus/M68K/: m68k.h
components/gwenesis/src/sound/: ym2612.c
components/gwenesis/src/vdp/: gwenesis_vdp.h
components/handy/: CMakeLists.txt  handy_run.cpp  handy_run.h
components/huexpress/: CMakeLists.txt  huexpress_run.c  osd_keyboard.c  utils.c
components/huexpress/engine/: gfx.c  gfx.h  gfx_Loop6502.h  h6280_exe_go.h
components/huexpress/include/: huexpress_run.h
components/huexpress/includes/: myadd.h
components/nofrendo/: CMakeLists.txt  bitmap.c  event.c  intro.c  nofrendo.c  nofrendo_run.c  vid_drv.c
components/nofrendo/cpu/: nes6502.c
components/nofrendo/esp32/: osd.c  video_audio.c
components/nofrendo/include/: memguard.h  nofrendo_run.h
components/nofrendo/libsnss/: libsnss.c
components/nofrendo/nes/: nes.c  nesinput.c  nesstate.c
components/nofrendo/sndhrdw/: nes_apu.c
components/odroid/: CMakeLists.txt  odroid_audio.c  odroid_display.c  odroid_input.c  odroid_sdcard.c  odroid_system.c
components/odroid/include/: odroid_display.h  odroid_input.h  odroid_system.h  pins_config.h
components/opentyrian/: CMakeLists.txt  file.c  opentyr.h  varz.c
components/opentyrian_sdl/: CMakeLists.txt  SDL_audio.c  SDL_audio.h  SDL_event.c  SDL_event.h  SDL_system.c  SDL_system.h  SDL_video.c  SDL_video.h  begin_code.h  close_code.h
components/prosystem/: CMakeLists.txt  Maria.c  Memory.c  ProSystem.c  Riot.c  Sally.c  prosystem_run.c
components/prosystem/include/: Maria.h  Tia.h  prosystem_run.h
components/smsplus/: CMakeLists.txt  config.c  loadrom.c  render.c  smsplus_run.c  state.c
components/smsplus/cpu/: z80.c
components/smsplus/include/: osd_cpu.h  shared.h  smsplus_run.h  system.h
components/smsplus/sound/: emu2413.c
components/snes9x/: CMakeLists.txt  apu_blargg.c  cpuexec.c  fxemu.c  fxemu.h  fxinst.c  fxinst.h  fxstub.c  gfx.c  memmap.c  pixform.h  ppu.c  save.c  snes9x.lf  soundux.c  spc700.h
components/spectrum/: CMakeLists.txt  ay_sound.c  loadim.c  rom_imag.c  snapshot.c  spectkey.c  spectrum_run.c  spmain.c  spperif.c  spscr.c  spsound.c  sptiming.c  stubs.c  vgakey.c  z80.c
components/spectrum/include/: ay_sound.h  config.h  sp_def.h  spectrum_run.h  z80.h
components/stella/: CMakeLists.txt  stella_run.cpp  stella_run.h
components/stella/common/: Base.cpp  Base.hxx  SoundSDL.cpp  bspf.hxx  stella_compat_fstream.h  stella_compat_streams.h
components/stella/emucore/: Cart.cpp  Cart.hxx  CartUA.hxx  Console.cpp  M6502.cpp  M6532.cpp  MD5.cpp  MT24LC256.cpp  Paddles.cpp  Props.cpp  PropsSet.cpp  Serializer.cpp  Serializer.hxx  Settings.cpp  StateManager.cpp  System.cpp  TIA.cpp  TIATables.cpp
launcher/: CMakeLists.txt  sdkconfig  sdkconfig.defaults  sdkconfig.hdmi.defaults
launcher/main/: CMakeLists.txt  main.c
launcher/main/includes/: core.h  declarations.h  definitions.h  structures.h
launcher/main/sprites/: font8x16.h  gamepad_icons.h  genesis_icon.h  neogeo_icon.h  systems.h
main/: CMakeLists.txt  main.c
main/includes/: core.h  declarations.h  definitions.h  structures.h
main/sprites/: battery.h  systems.h
tools/: build_doom_papp.ps1  build_duke3d_papp.ps1  build_opentyrian_papp.ps1  build_psram_app.ps1  build_quake_papp.ps1  pack_papp.py  passive_capture.py  psram_app.ld  quick_capture.py  upload_papp.py
(+176 files in other folders)
