idf_component_register(
    SRCS
        "animlib.c"
        "arg_parse.c"
        "backgrnd.c"
        "config.c"
        "config_file.c"
        "destruct.c"
        "editship.c"
        "episodes.c"
        "file.c"
        "font.c"
        "fonthand.c"
        "game_menu.c"
        "helptext.c"
        "joystick.c"
        "jukebox.c"
        "keyboard.c"
        "lds_play.c"
        "loudness.c"
        "lvllib.c"
        "lvlmast.c"
        "mainint.c"
        "menus.c"
        "mouse.c"
        "mtrand.c"
        "musmast.c"
        "network.c"
        "nortsong.c"
        "nortvars.c"
        "opentyr.c"
        "opl.c"
        "palette.c"
        "params.c"
        "pcxload.c"
        "pcxmast.c"
        "picload.c"
        "player.c"
        "scroller.c"
        "setup.c"
        "shots.c"
        "sizebuf.c"
        "sndmast.c"
        "sprite.c"
        "starlib.c"
        "std_support.c"
        "tyrian2.c"
        "varz.c"
        "vga256d.c"
        "vga_palette.c"
        "video.c"
        "video_scale.c"
        "video_scale_hqNx.c"
        "xmas.c"
    INCLUDE_DIRS "."
    REQUIRES opentyrian_sdl
)

# Suppress warnings in third-party game code
target_compile_options(${COMPONENT_LIB} PRIVATE
    -Wno-format
    -Wno-unused-variable
    -Wno-unused-function
    -Wno-maybe-uninitialized
    -Wno-implicit-function-declaration
    -Wno-pointer-sign
    -Wno-int-conversion
    -Wno-incompatible-pointer-types
    -Wno-dangling-pointer
    -Wno-array-bounds
    -Wno-address
    -Wno-restrict
)
