idf_component_register(
    SRCS
        "stella_run.cpp"
        "common/Base.cpp"
        "common/MouseControl.cpp"
        "common/SoundSDL.cpp"
        "emucore/Booster.cpp"
        "emucore/Cart.cpp"
        "emucore/Cart2K.cpp"
        "emucore/Cart3E.cpp"
        "emucore/Cart3F.cpp"
        "emucore/Cart4K.cpp"
        "emucore/CartAR.cpp"
        "emucore/CartCV.cpp"
        "emucore/CartDPC.cpp"
        "emucore/CartE0.cpp"
        "emucore/CartE7.cpp"
        "emucore/CartF4.cpp"
        "emucore/CartF4SC.cpp"
        "emucore/CartF6.cpp"
        "emucore/CartF6SC.cpp"
        "emucore/CartF8.cpp"
        "emucore/CartF8SC.cpp"
        "emucore/CartFA.cpp"
        "emucore/CartFE.cpp"
        "emucore/CartUA.cpp"
        "emucore/Console.cpp"
        "emucore/Control.cpp"
        "emucore/Driving.cpp"
        "emucore/Genesis.cpp"
        "emucore/Joystick.cpp"
        "emucore/Keyboard.cpp"
        "emucore/M6502.cpp"
        "emucore/M6532.cpp"
        "emucore/MD5.cpp"
        "emucore/NullDev.cpp"
        "emucore/Paddles.cpp"
        "emucore/Props.cpp"
        "emucore/PropsSet.cpp"
        "emucore/Random.cpp"
        "emucore/Serializer.cpp"
        "emucore/Settings.cpp"
        "emucore/StateManager.cpp"
        "emucore/Stubs.cpp"
        "emucore/Switches.cpp"
        "emucore/System.cpp"
        "emucore/TIA.cpp"
        "emucore/TIASnd.cpp"
        "emucore/TIATables.cpp"
        "emucore/TrackBall.cpp"
    INCLUDE_DIRS "." "common" "emucore" "gui"
    REQUIRES odroid esp_timer
)

# Stella compile options
target_compile_definitions(${COMPONENT_LIB} PUBLIC
    SOUND_SUPPORT=1
    JUMP_TABLES_IN_TEXT_SECTION=1
)

# Suppress C++ warnings in legacy Stella code
target_compile_options(${COMPONENT_LIB} PRIVATE
    -Wno-error=deprecated
    -Wno-error=write-strings
    -Wno-error=narrowing
    -Wno-error=unused-variable
    -Wno-error=unused-but-set-variable
    -Wno-error=sign-compare
    -Wno-error=missing-field-initializers
    -Wno-error=format
    -Wno-error=reorder
    -Wno-error=maybe-uninitialized
    -Wno-deprecated
    -Wno-write-strings
    -Wno-narrowing
    -Wno-unused-variable
    -Wno-unused-but-set-variable
    -Wno-sign-compare
    -Wno-missing-field-initializers
    -Wno-reorder
    -Wno-maybe-uninitialized
    -Wno-error=format-truncation
    -Wno-error=format-overflow
    -Wno-error=type-limits
    -Wno-error=template-id-cdtor
    -Wno-template-id-cdtor
    -fno-exceptions
    -fno-rtti
)
